# patrol

./: .devcontainer.json  .gitignore  .hlint.yaml  CHANGELOG.markdown  CHANGELOG.md  README.markdown  README.md  cabal.project  compose.yaml  patrol.cabal
.devcontainer/: cabal-shim.sh  compose.yaml  devcontainer.json  initialize.sh  on-create.sh
.github/workflows/: ci.yaml  ci.yml  workflow.yaml
source/test-suite/: Main.hs  PatrolSpec.hs
source/test-suite/Patrol/: ClientSpec.hs  ConstantSpec.hs
source/test-suite/Patrol/Extra/: AesonSpec.hs  ListSpec.hs  TextSpec.hs
source/test-suite/Patrol/Type/: AppContextSpec.hs  AppleDebugImageSpec.hs  BreadcrumbSpec.hs  BreadcrumbTypeSpec.hs  BreadcrumbsSpec.hs  BrowserContextSpec.hs  CErrorSpec.hs  ClientReportSpec.hs  ClientSdkInfoSpec.hs  ClientSdkPackageSpec.hs  ContextSpec.hs  DataCategorySpec.hs  DebugImageSpec.hs  DebugMetaSpec.hs  DeviceContextSpec.hs  DiscardedEventSpec.hs  DistSpec.hs  DsnSpec.hs  EnvelopeSpec.hs  EnvironmentSpec.hs  ErrnoSpec.hs  ErrorSpec.hs  ErrorTypeSpec.hs  EventIdSpec.hs  EventProcessingErrorSpec.hs  EventSpec.hs  EventTypeSpec.hs  ExceptionSpec.hs  ExceptionValueSpec.hs  ExceptionsSpec.hs  FrameSpec.hs  GeoSpec.hs  GpuContextSpec.hs  HeadersSpec.hs  HostSpec.hs  ItemSpec.hs  ItemsSpec.hs  LevelSpec.hs  LogEntrySpec.hs  LoggerSpec.hs  (+40 more)
source/test-suite/Patrol/Type/Event/: IdSpec.hs
src/lib/: Patrol.hs
src/lib/Patrol/: Client.hs
src/lib/Patrol/Type/: Dsn.hs  Event.hs  EventId.hs  Exception.hs  Frame.hs  Level.hs  Platform.hs  Request.hs  Response.hs  StackTrace.hs  Timestamp.hs  User.hs
src/lib/Patrol/Utility/: Json.hs  Maybe.hs
