cabal-version: 2.2

name: patrol
version: 0.1.0.0
synopsis: Sentry SDK
description: Patrol is a Sentry SDK.

build-type: Simple
category: Exceptions
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/patrol
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends:
    , base >= 4.15.1 && < 4.18
    , network-uri >= 2.6.4 && < 2.7
    , text >= 2.0.1 && < 2.1
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 9.2)
    ghc-options: -Wno-missing-kind-signatures

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library

  build-depends: patrol
  ghc-options: -rtsopts -threaded

library
  import: library

  autogen-modules: Paths_patrol
  exposed-modules:
    Patrol
    Patrol.Extra.Text
    Patrol.Type.Dsn
    Patrol.Type.Host
    Patrol.Type.Path
    Patrol.Type.Port
    Patrol.Type.ProjectId
    Patrol.Type.Protocol
    Patrol.Type.PublicKey
    Patrol.Type.SecretKey
  hs-source-dirs: source/library
  other-modules: Paths_patrol

test-suite patrol-test-suite
  import: executable

  build-depends:
    , hspec >= 2.10.1 && < 2.11
  hs-source-dirs: source/test-suite
  main-is: Main.hs
  other-modules:
    Patrol.Extra.TextSpec
    Patrol.Type.DsnSpec
    Patrol.Type.HostSpec
    Patrol.Type.PathSpec
    Patrol.Type.PortSpec
    Patrol.Type.ProjectIdSpec
    Patrol.Type.ProtocolSpec
    Patrol.Type.PublicKeySpec
    Patrol.Type.SecretKeySpec
  type: exitcode-stdio-1.0
