cabal-version: 2.2

name: patrol
version: 0.1.0.0
synopsis: Sentry SDK
description: Patrol is a Sentry SDK.

build-type: Simple
category: Exceptions
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/patrol
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends:
    , aeson >= 2.1 && < 2.2
    , base >= 4.15 && < 4.18
    , bytestring >= 0.10.12 && < 0.12
    , case-insensitive >= 1.2.1 && < 1.3
    , http-client >= 0.7.13 && < 0.8
    , http-types >= 0.12.3 && < 0.13
    , network-uri >= 2.6.4 && < 2.7
    , text >= 1.2.4 && < 1.3 || >= 2.0.1 && < 2.1
    , time >= 1.9.3 && < 1.13
    , uuid >= 1.3.15 && < 1.4
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 9.2)
    ghc-options: -Wno-missing-kind-signatures

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library

  build-depends: patrol
  ghc-options: -rtsopts -threaded

library
  import: library

  autogen-modules: Paths_patrol
  build-depends:
    , exceptions >= 0.10.4 && < 0.11
  exposed-modules:
    Patrol
    Patrol.Client
    Patrol.Constant
    Patrol.Exception.Problem
    Patrol.Extra.List
    Patrol.Extra.Text
    Patrol.Type.Dist
    Patrol.Type.Dsn
    Patrol.Type.Event
    Patrol.Type.EventId
    Patrol.Type.Host
    Patrol.Type.Level
    Patrol.Type.Logger
    Patrol.Type.Path
    Patrol.Type.Platform
    Patrol.Type.Port
    Patrol.Type.ProjectId
    Patrol.Type.Protocol
    Patrol.Type.PublicKey
    Patrol.Type.Release
    Patrol.Type.Response
    Patrol.Type.SecretKey
    Patrol.Type.Timestamp
    Patrol.Version
  hs-source-dirs: source/library
  other-modules: Paths_patrol

test-suite patrol-test-suite
  import: executable

  build-depends:
    , hspec >= 2.10.1 && < 2.11
  hs-source-dirs: source/test-suite
  main-is: Main.hs
  other-modules:
    Patrol.ClientSpec
    Patrol.ConstantSpec
    Patrol.Extra.ListSpec
    Patrol.Extra.TextSpec
    Patrol.Type.DistSpec
    Patrol.Type.DsnSpec
    Patrol.Type.EventIdSpec
    Patrol.Type.EventSpec
    Patrol.Type.HostSpec
    Patrol.Type.LevelSpec
    Patrol.Type.LoggerSpec
    Patrol.Type.PathSpec
    Patrol.Type.PlatformSpec
    Patrol.Type.PortSpec
    Patrol.Type.ProjectIdSpec
    Patrol.Type.ProtocolSpec
    Patrol.Type.PublicKeySpec
    Patrol.Type.ReleaseSpec
    Patrol.Type.ResponseSpec
    Patrol.Type.SecretKeySpec
    Patrol.Type.TimestampSpec
    PatrolSpec
  type: exitcode-stdio-1.0
